# splatfacto-w

./: .gitignore  README.md  export_script.py  pyproject.toml
dataset_split/: brandenburg.tsv  sacre.tsv  trevi.tsv
method_template/: splatfactow_config.py  splatfactow_field.py  template_config.py  template_datamanager.py  template_field.py  template_model.py
splatfactow/: nerfw_dataparser.py  phototourism_dataparser.py  splatfactow_config.py  splatfactow_datamanager.py  splatfactow_field.py  splatfactow_model.py  splatfactow_pipeline.py  template_pipeline.py
