[project]
name = "splatfacto-w"
description = "Splatfacto in the Wild"
version = "0.1.5"

dependencies = ["nerfstudio >= 1.1.0"] 

[tool.setuptools.packages.find]
include = ["splatfactow*", "splatfactow_light*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
splatfactow = 'splatfactow.splatfactow_config:splatfactow_config'
splatfactow_light = 'splatfactow.splatfactow_config:splatfactow_light_config'
